# HiNDK

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/hsf1002/sky/hindk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/base/: base.h  jvm.cpp
app/src/main/cpp/hello/: hello-lib.cpp
app/src/main/cpp/jni/: basic_type.cpp  dynamic-lib.cpp  jni_dynamic_load.cpp
app/src/main/cpp/person/: person-lib.cpp  person.cpp  person.h
app/src/main/cpp/queue/: skyqueue.cpp
app/src/main/cpp/teacher/: teacher-lib.cpp  teacher.cpp  teacher.h
app/src/main/java/com/hsf1002/sky/: Animal.java  Auxinout.java  Hello.java  Person.java  Teacher.java
app/src/main/java/com/hsf1002/sky/hindk/: MainActivity.java
app/src/main/java/com/hsf1002/sky/hindk/load/: JNIDynamicload.java
app/src/main/java/com/hsf1002/sky/jni/: AccessField.java  AccessMethod.java  BasicType.java  ConstructorClass.java  DynamicLoad.java  IMethodCB.java  IThreadCB.java  InvokeMethod.java  JNIException.java  JNIThread.java  RefType.java  Reference.java  StringType.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/hsf1002/sky/hindk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
